# kanaval

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: run-tests.yaml
docs/: Doxyfile  adt__normalization_8hpp.html  adt__normalization_8hpp__dep__incl.map  adt__normalization_8hpp__dep__incl.md5  adt__normalization_8hpp__incl.map  adt__normalization_8hpp__incl.md5  adt__normalization_8hpp_source.html  adt__pca_8hpp.html  adt__pca_8hpp__dep__incl.map  adt__pca_8hpp__dep__incl.md5  adt__pca_8hpp__incl.map  adt__pca_8hpp__incl.md5  adt__pca_8hpp_source.html  adt__quality__control_8hpp.html  adt__quality__control_8hpp__dep__incl.map  adt__quality__control_8hpp__dep__incl.md5  adt__quality__control_8hpp__incl.map  adt__quality__control_8hpp__incl.md5  adt__quality__control_8hpp_source.html  annotated.html  batch__correction_8hpp.html  batch__correction_8hpp__dep__incl.map  batch__correction_8hpp__dep__incl.md5  batch__correction_8hpp__incl.map  batch__correction_8hpp__incl.md5  batch__correction_8hpp_source.html  cell__filtering_8hpp.html  cell__filtering_8hpp__dep__incl.map  cell__filtering_8hpp__dep__incl.md5  cell__filtering_8hpp__incl.map  cell__filtering_8hpp__incl.md5  cell__filtering_8hpp_source.html  cell__labelling_8hpp.html  cell__labelling_8hpp__dep__incl.map  cell__labelling_8hpp__dep__incl.md5  cell__labelling_8hpp__incl.map  cell__labelling_8hpp__incl.md5  cell__labelling_8hpp_source.html  choose__clustering_8hpp.html  choose__clustering_8hpp__dep__incl.map  (+217 more)
docs/details/_metadata/: v3_0.md
docs/details/adt_normalization/: latest.md  v2_0.md
docs/details/adt_pca/: latest.md  v2_0.md
docs/details/adt_quality_control/: latest.md  v2_0.md  v2_1.md  v3_0.md
docs/details/batch_correction/: latest.md  v2_0.md
docs/details/cell_filtering/: latest.md  v2_0.md  v3_0.md
docs/details/cell_labelling/: latest.md  v1_0.md  v3_0.md
docs/details/choose_clustering/: latest.md  v1_0.md
docs/details/combine_embeddings/: latest.md  v2_0.md  v3_0.md
docs/details/crispr_normalization/: v3_0.md
docs/details/crispr_pca/: v3_0.md
docs/details/crispr_quality_control/: v3_0.md
docs/details/custom_selections/: latest.md  v1_0.md  v2_0.md  v2_1.md  v3_0.md
docs/details/feature_selection/: latest.md  v1_0.md  v3_0.md
docs/details/inputs/: latest.md  v1_0.md  v1_1.md  v1_2.md  v2_0.md  v2_1.md  v3_0.md
docs/details/kmeans_cluster/: latest.md  v1_0.md
docs/details/marker_detection/: latest.md  v1_0.md  v2_0.md  v3_0.md
docs/details/neighbor_index/: latest.md  v1_0.md
docs/details/normalization/: latest.md  v1_0.md
docs/details/pca/: latest.md  v1_0.md  v1_1.md  v2_0.md
docs/details/quality_control/: latest.md  v1_0.md  v2_1.md
docs/details/rna_normalization/: v3_0.md
docs/details/rna_pca/: v3_0.md
docs/details/rna_quality_control/: v3_0.md
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  files_0.js  files_2.js  files_5.js  files_7.js  files_9.js  functions_0.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  pages_6.js  pages_7.js  pages_8.js  pages_9.js  pages_a.js  pages_b.js  pages_c.js  pages_d.js  searchdata.js  variables_0.js  variables_1.js
include/kanaval/: adt_normalization.hpp  adt_pca.hpp  adt_quality_control.hpp  batch_correction.hpp  cell_filtering.hpp  cell_labelling.hpp  choose_clustering.hpp  combine_embeddings.hpp  custom_selections.hpp  feature_selection.hpp  inputs.hpp  kanaval.hpp  kmeans_cluster.hpp  marker_detection.hpp  misc.hpp  neighbor_index.hpp  normalization.hpp  pca.hpp  quality_control.hpp  snn_graph_cluster.hpp  tsne.hpp  umap.hpp  utils.hpp  validate.hpp
tests/: CMakeLists.txt
tests/src/: adt_normalization.cpp  adt_pca.cpp  adt_quality_control.cpp  batch_correction.cpp  cell_filtering.cpp  cell_labelling.cpp  choose_clustering.cpp  combine_embeddings.cpp  custom_selections.cpp  feature_selection.cpp  helpers.h  inputs.cpp  kmeans_cluster.cpp  marker_detection.cpp  neighbor_index.cpp  normalization.cpp  pca.cpp  quality_control.cpp  snn_graph_cluster.cpp  tsne.cpp  umap.cpp  utils.h  validate.cpp
tests/src/v2/: _validate.cpp  adt_normalization.cpp  adt_pca.cpp  adt_quality_control.cpp  batch_correction.cpp  cell_filtering.cpp  cell_labelling.cpp  choose_clustering.cpp  combine_embeddings.cpp  custom_selections.cpp  feature_selection.cpp  helpers.h  inputs.cpp  kmeans_cluster.cpp  marker_detection.cpp  neighbor_index.cpp  normalization.cpp  pca.cpp  quality_control.cpp  snn_graph_cluster.cpp  tsne.cpp  umap.cpp  validate.cpp
tests/src/v3/: _metadata.cpp  _validate.cpp  adt_quality_control.cpp  cell_filtering.cpp  cell_labelling.cpp  combine_embeddings.cpp  crispr_normalization.cpp  crispr_pca.cpp  crispr_quality_control.cpp  custom_selections.cpp  feature_selection.cpp  helpers.h  inputs.cpp  marker_detection.cpp  rna_normalization.cpp  rna_pca.cpp  rna_quality_control.cpp  snn_graph_cluster.cpp
(+50 files in other folders)
